change pre to span mono

--- a/webui/templates/privacy.jinja2
+++ b/webui/templates/privacy.jinja2
@@ -68,7 +68,7 @@
         </p>
 
         <p>
-            To opt-out of Plausible Analytics, add domain <pre>p.hamp.app</pre> to your adblocker.
+            To opt-out of Plausible Analytics, add domain <span class="mono">p.hamp.app</span> to your adblocker.
         </p>
     {% endif %}
 
