--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -15,7 +15,7 @@
         }
 
         pre {
-            background-color: #eee;
+            background-color: #f8f8f8;
             padding: 10px;
             overflow-y: scroll;
             max-height: 800px;
@@ -26,7 +26,8 @@
         }
 
         .tabs-title > a {
-            font-size: 0.875em;
+            font-size: 0.9em;
+            padding: 0.75rem;
         }
 
     </style>
