change beta description

--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -52,10 +52,9 @@
         <div id="beta">
             <h4>This is the preview version of the explorer.</h4>
             <p>
-                Currently, the preview version has an incomplete interpreter for Aleo instructions, so it could track
-                the data inside mappings. The values calculated by the explorer are checked with the hashes in the
-                blocks, so they should be correct. (The query UI is not implemented yet, so you can't see the values
-                right now)
+                Currently, the preview version has an incomplete interpreter for Aleo instructions. All finalizers are
+                locally executed and the mapping values are independently calculated. Those values are checked with the
+                hashes on the blockchain.
             </p>
             <p>
                 As the interpreter still can't execute all instructions, the explorer will stop syncing when it
