fix style issue

--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -30,8 +30,32 @@
             padding: 0.75rem;
         }
 
-        #read input[type="text"] {
+        #read input:not([type]) {
             height: 2rem;
+            display: block;
+            box-sizing: border-box;
+            width: 100%;
+            margin: 0 0 1rem;
+            padding: 0.5rem;
+            border: 1px solid #cacaca;
+            border-radius: 0;
+            background-color: #fefefe;
+            box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+            font-family: inherit;
+            font-size: 1rem;
+            font-weight: normal;
+            line-height: 1.5;
+            color: #0a0a0a;
+            transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
+            appearance: none;
+        }
+
+        #read input:not([type]):focus {
+            outline: none;
+            border: 1px solid #8a8a8a;
+            background-color: #fefefe;
+            box-shadow: 0 0 5px #cacaca;
+            transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
         }
 
         #read input[type="submit"] {
